/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Rishi Gadhia
 */
package baseline;
public class Solution44 {
    public static void main(String[] args) {
        ParseInput parseInput = new ParseInput();
        parseInput.parseInput();

    }
}
